# race-data-validator

./: .gitignore  CONTRACT.md  README.md  pyproject.toml
race_validator/: __init__.py  api.py  normalize.py  report.py  runner.py  version.py
race_validator/adapters/: bundled_data.py  csv_io.py
race_validator/app/: launch.py  streamlit_app.py
race_validator/checks/: base.py  column_names.py  cross_field.py  duplicates.py  encoding.py  file_naming.py  forbidden_chars.py  master_table_refs.py  normalization_integrity.py  pole_fastest.py  registry.py  structure.py  timestamps.py  value_types.py  whitespace.py
race_validator/data/: dim_categories.csv  dim_circuits.csv  dim_countries.csv  dim_regions.csv  dim_series.csv
race_validator/schemas/: __init__.py  base.py  enums.py  results.py  schedule.py
tests/: test_checks_v02.py  test_checks_v025.py  test_encoding.py  test_file_naming.py  test_normalize.py
